k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nocap-be
  namespace: nocap
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: nocap-be
  template:
    metadata:
      labels:
        app: nocap-be
    spec:
      imagePullSecrets:
        - name: ncr-cred
      containers:
        - name: nocap-be
          image: no-cap.kr.ncr.ntruss.com/nocap-be:latest
          ports:
            - containerPort: 8080
          args: ["--spring.config.additional-location=file:/app/config/application.yml"]
          volumeMounts:
            - name: app-config
              mountPath: /app/config
              readOnly: true
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: app-config
          configMap:
            name: app-config
